--- a/ROHSApy.ipynb
+++ b/ROHSApy.ipynb
@@ -637,12 +637,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8hftmd5yuDOb",
-        "outputId": "4d857d83-f3fb-4547-e83d-9a8690355015",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        }
+        },
+        "id": "8hftmd5yuDOb",
+        "outputId": "851019bc-7369-4a2d-fc4c-c74ee79f6863"
       },
       "source": [
         "#Plot mosaic spectra                                                                                                                                                                 \n",
@@ -655,23 +655,25 @@
         "\n",
         "ny = 4; nx = 4\n",
         "center_y = int(cube.shape[2]/2); center_x = int(cube.shape[1]/2)\n",
+        "x = np.arange(cube.shape[0])\n",
         "cb = \"magenta\"\n",
         "cw = \"crimson\"\n",
         "fig, axs = plt.subplots(4, 4, sharex=True, sharey=True, figsize=(10.,6.))\n",
         "fig.subplots_adjust(hspace=0, wspace=0, left=0, right=1, top=1, bottom=0)\n",
         "for i in np.arange(ny):\n",
         "    for j in np.arange(nx):\n",
-        "        axs[i][j].step(np.arange(cube.shape[0]), cube[:,center_y+i,center_x+j], color='cornflowerblue', linewidth=2.)\n",
-        "        axs[i][j].plot(np.arange(cube.shape[0]), model[:,center_y+i,center_x+j], linestyle=\"-\", linewidth=2., color=\"k\")\n",
+        "        axs[i][j].step(x, cube[:,center_y+i,center_x+j], color='cornflowerblue', linewidth=2.)\n",
+        "        axs[i][j].plot(x, model[:,center_y+i,center_x+j], linestyle=\"-\", linewidth=2., color=\"k\")\n",
         "        for k in range(len(integral)):\n",
-        "            axs[i][j].plot(np.arange(cube.shape[0]), core.gauss(np.arange(cube.shape[0]), gaussian[0::3][k][center_y+i,center_x+j],\n",
-        "                                              gaussian[1::3][k][center_y+i,center_x+j], gaussian[2::3][k][center_y+i,center_x+j]),\n",
+        "            axs[i][j].plot(x, core.gauss(x, gaussian[0::3][k][center_y+i,center_x+j],\n",
+        "                                            gaussian[1::3][k][center_y+i,center_x+j], \n",
+        "                                            gaussian[2::3][k][center_y+i,center_x+j]),\n",
         "                           linewidth=2., color=plt.cm.inferno(pvalues[k]))\n",
         "        if j == 0: axs[i][j].set_ylabel(r'T [k]')\n",
         "        axs[i][j].set_xlabel(r'v [km s$^{-1}$]')\n",
         "# plt.savefig(\"plot/\" + 'mosaic_spectra_all.png', format='png', bbox_inches='tight', pad_inches=0.02)\n"
       ],
-      "execution_count": 53,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
